# pve-automation

./: .gitignore  .gitmodules  .hook-config.yml  Makefile  README.md
ansible/: .gitignore  Makefile  README.md  ansible.cfg  play-base.yml  play-buildkite.yml  play-docker.yml  play-k3s.yml  play-minio.yml  play-nomad.yml  play-tailscale.yml  pyproject.toml  requirements.txt  requirements.yml
ansible/collections/: requirements.yml
ansible/inventory/: inventory.yml
ansible/inventory/group_vars/: minio_server.yml.example  packer_base.yml.example  packer_buildkite.yml.example
ansible/playbooks/: base.yml  buildkite.yml  k3s.yml  minio.yml  nomad.yml  stage1.yml
ansible/plugins/filter/: command.py  container.py
ansible/plugins/test/: container.py
ansible/roles/: requirements.yml
ansible/roles/base/defaults/: main.yml
ansible/roles/base/files/: mdadm-mkconf
ansible/roles/base/handlers/: main.yml
ansible/roles/base/tasks/: mailer.yml  main.yml  netdata.yml  raid.yml  serf.yml
ansible/roles/base/templates/: serf.config.json.j2  serf.service.j2
ansible/roles/buildkite/defaults/: main.yml
ansible/roles/buildkite/handlers/: main.yml
ansible/roles/buildkite/tasks/: main.yml
ansible/roles/buildkite/templates/: buildkite-agent.service.j2
ansible/roles/docker/handlers/: main.yml
ansible/roles/docker/tasks/: gpu.yml  main.yml
ansible/roles/k3s/defaults/: main.yml
ansible/roles/k3s/handlers/: main.yml
ansible/vars/base/: all.yml.example
ansible/vars/buildkite/: all.yml.example
ansible/vars/docker/: all.yml.example
fluxcd/: README.md
(+254 files in other folders)
