[project]
name = "ansible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible-core==2.18.4",
    "ansible==11.4.0",
    "cffi==1.17.1",
    "cryptography==44.0.0",
    "jinja2==3.1.4",
    "markupsafe==3.0.2",
    "mitogen==0.3.22",
    "packaging==24.2",
    "pycparser==2.22",
    "pyyaml==6.0.2",
    "resolvelib==0.8.1",
]

[tool.uv.sources]
ansible = { workspace = true }
